# hrv_match

./: README.md  main.ipynb  pyproject.toml  requirements.txt
peakalignment/: __init__.py  apply_alignment.py  constants.py  density_filter.py  line_filter.py  peak_alignment.py  regression.py  signal_matching.py
plotting/: plot_rpeak_detector.py
tests/: add_gaps.py  add_noise.py  calculate_true_offset.py  generate_random.py  rpeak_detector.py  statistical_correctness.py  test_calculate_alignment.py  test_main.py
