[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrvmatch"
version = "0.1.0"
description = "Python library for aligning heart rate variability signals"
readme = "README.md"
authors = [{ name = "William Dixon", email = "will.dixon@sickkids.ca" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
keywords = ["hrv", "match", "analysis", "Python"]
dependencies = [
    'tomli; python_version < "3.11"',
    "numpy == 1.24.3",
    "scipy == 1.10.1",
    "scikit-learn == 1.2.2",
]

[project.optional-dependencies]
test_and_demo = [
    "wfdb == 4.1.1",
    "tqdm == 4.65.0",
    "matplotlib == 3.7.1",
    "biosppy == 1.0.0",
    "neurokit2 == 0.2.4",
]